Fix photo credit not showing

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ a {
 }
 
 .credit {
-    position: relative;
+    position: absolute;
     top: 95vh;
     left: 200px;
     color: white;
